--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     compile 'com.android.support:support-v13:24.0.0-beta1'
     compile 'com.android.support:design:24.0.0-beta1'
     compile 'com.google.android.apps.muzei:muzei-api:2.0'
+    compile 'com.google.android.gms:play-services-wearable:9.0.0'
 }
