--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.google.gms.google-services'
+
 
 android {
     compileSdkVersion 23
@@ -7,7 +7,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.android.sunshine.app"
-        minSdkVersion 16
+        minSdkVersion 18
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -24,17 +24,19 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    apply plugin: 'com.google.gms.google-services'
-    compile 'com.android.support:support-annotations:24.0.0-beta1'
-    compile 'com.github.bumptech.glide:glide:3.6.1'
-    compile 'com.android.support:appcompat-v7:24.0.0-beta1'
-    compile 'com.android.support:cardview-v7:24.0.0-beta1'
-    compile 'com.google.android.gms:play-services-gcm:9.0.0'
-    compile 'com.android.support:gridlayout-v7:24.0.0-beta1'
-    compile 'com.android.support:recyclerview-v7:24.0.0-beta1'
-    compile 'com.android.support:support-v13:24.0.0-beta1'
-    compile 'com.android.support:design:24.0.0-beta1'
-    compile 'com.google.android.apps.muzei:muzei-api:2.0'
-    compile 'com.google.android.gms:play-services-wearable:9.0.0'
+    dependencies {
+        compile fileTree(dir: 'libs', include: ['*.jar'])
+        compile 'com.github.bumptech.glide:glide:3.5.2'
+        compile 'com.android.support:support-annotations:23.4.0'
+        compile 'com.android.support:gridlayout-v7:23.4.0'
+        compile 'com.android.support:cardview-v7:23.4.0'
+        compile 'com.android.support:appcompat-v7:23.4.0'
+        compile 'com.android.support:design:23.4.0'
+        compile 'com.android.support:recyclerview-v7:23.4.0'
+        compile 'com.google.android.apps.muzei:muzei-api:2.0'
+        compile 'com.google.android.gms:play-services-gcm:8.4.0'
+        compile 'com.google.android.gms:play-services-wearable:8.4.0'
+    }
+
+
 }
