--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -160,7 +160,11 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/widget_info_detail" />
         </receiver>
-
+        <service android:name=".sync.SunshineWearableListener">
+            <action android:name="com.google.android.gms.wearable.DATA_CHANGED" />
+            <data android:scheme="wear" android:host="*"
+                android:path="/sunshine/NewData" />
+        </service>
         <service
             android:name=".widget.DetailWidgetRemoteViewsService"
             android:enabled="@bool/widget_detail_enabled"
@@ -183,6 +187,7 @@
         <service
             android:name=".gcm.RegistrationIntentService"
             android:exported="false" />
+        <service android:name=".sync.SunshineSyncAdapter" />
 
         <meta-data
             android:name="com.google.android.gms.version"
