--- a/sunshinewatch/src/main/AndroidManifest.xml
+++ b/sunshinewatch/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@android:style/Theme.DeviceDefault">
+        <uses-library android:name="com.google.android.wearable" android:required="false" />
         <service
             android:name=".DigitalWatchFaceService"
             android:label="@string/my_digital_name"
